k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ores
  labels:
    app.kubernetes.io/part-of: ores
